--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "main": "index.ts",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "build": "npx tsc index.ts",
-        "run": "npm run build; node index.js"
+        "build": "npx tsc --project tsconfig.json",
+        "run": "node dist/src/index.js"
     },
     "keywords": [
         "pleco",
@@ -16,7 +16,6 @@
     "license": "MIT",
     "dependencies": {
         "@types/jest": "^27.4.0",
-        "@types/node": "^17.0.5",
         "esbuild": "^0.14.10",
         "eslint-config-google": "^0.14.0",
         "gts": "^3.1.0",
@@ -26,6 +25,7 @@
         "typescript": "^4.5.4"
     },
     "devDependencies": {
+        "@types/node": "^17.0.6",
         "@typescript-eslint/eslint-plugin": "^5.8.1",
         "@typescript-eslint/parser": "^5.8.1",
         "eslint": "^8.6.0"
